codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__agents_overview_link_rows.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 1271
expression: "linked_rows.join(\"\\n\")"
---
a pull request with a label
that wraps across rows
https://example.com/a/long/path/to/
the/pull/request
