codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__overview_empty_prompt_right_hint.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: rendered.lines().last().unwrap()
---
  x stop h hide a archive del delete ctrl+c quit
