codex-rs/tui/src/app/snapshots/codex_tui__app__agents_overview__tests__overview_fork_preserves_an_open_side_conversation.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 2740
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Unable to complete action
  Close the side conversation before forking another task.


› 1. Return to command center

  enter select · esc back
